@@ -1,3 +1,11 @@
+[B]1.4.1[/B] - 25-05-2019
+- Added "set title and play" context menu item
+- Various other tweaks
+
+[B]1.4.0[/B] - 16-05-2019
+- Minimum version 18.0 required (Leia)
+- Various bug fixes
+
 [B]1.3.0[/B] - 25-11-2018
 - Added generic plugin, credits go to back-to
 - Removed vidto plugin
